<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="30dp"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:id="@+id/date"
            android:layout_margin="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/station_hint"
            android:id="@+id/station"
            android:layout_margin="10dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odometer"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/odometer_hint"
            android:id="@+id/odometer"
            android:layout_margin="10dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_grade"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel_grade_hint"
            android:id="@+id/fuelGrade"
            android:layout_margin="10dp"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_amount"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel_amount_hint"
            android:inputType="numberDecimal"
            android:id="@+id/fuelAmount"
            android:layout_margin="10dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_total"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel_total_hint"
            android:inputType="numberDecimal"
            android:id="@+id/fuelTotal"
            android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textAlignment="center"
                android:text="@string/back"
                android:onClick="backClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textAlignment="center"
                android:text="@string/save"
                android:onClick="saveLog"
                android:id="@+id/saveButton"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>